2001-05-30  Miguel de Icaza  <miguel@ximian.com>

	* NEWS: 
